--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ JWT_SECRET="supersecret"
 CLOUDINARY_CLOUD_NAME="dssfuaou4"
 CLOUDINARY_API_KEY="218716689462525"
 CLOUDINARY_API_SECRET="AB_AMrVc-ufWMc98JxHAbX3zmvE"
+
+FRONTEND_URL="https://koti-wood-works-admin.netlify.app"
+
+EMAIL_USER="srirangamlokeswararao@gmail.com"
+EMAIL_PASS="golhadouejycysef"   
+SENDER_EMAIL="srirangamlokeswararao@gmail.com"
